infra/proxy/prtg.progist.ru/endpoints.yaml
apiVersion: v1
kind: Endpoints
metadata:
  name: prtg-progist-ru-proxy
  namespace: infra
subsets:
  - addresses:
      - ip: 10.0.0.11
    ports:
      - port: 80
