infra/proxy/prtg.progist.ru/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prtg-progist-ru-proxy
  namespace: infra
spec:
  ports:
  - port: 80
    targetPort: 80
  clusterIP: None
