infra/proxy/prtg.progist.ru/ingress-external.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prtg-progist-ru-internal
  namespace: infra
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/redirect-entry-point: websecure
    traefik.ingress.kubernetes.io/router.middlewares: infra-redirect-to-https@kubernetescrd
spec:
  rules:
  - host: prtg.progist.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prtg-progist-ru-proxy
            port:
              number: 80
  tls:
  - hosts:
    - prtg.progist.ru
    secretName: prtg-progist-ru-internal-tls
